remove tags that do not exist

--- a/config/RC2templates.yaml
+++ b/config/RC2templates.yaml
@@ -4,11 +4,11 @@ setup: |
   . /software/lsstsw/stack/loadLSST.bash 
   setup git_lfs
   export OMP_NUM_THREADS=1
-  setup lsst_sims -t sims_{week}
+  setup lsst_sims 
   setup lsst_distrib -k -t {week}
 
-  setup -k -t {week} -v -r {gitpath}/qa_explorer
-  setup -k -t {week} -v -r {gitpath}/pipe_analysis
+  setup  -v -r {gitpath}/qa_explorer
+  setup  -v -r {gitpath}/pipe_analysis
 
 setup_squash: |
 
@@ -113,6 +113,7 @@ templates:
       coaddDriver.py  /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB --rerun {rerun}
       --batch-type=slurm --mpiexec='-bind-to socket' --job coadd{tract}{filter} --time {time}
       --cores 24  --id tract={tract}  filter={filter} --selectId ccd=0..8^10..103 visit={visit}
+      --config makeCoaddTempExp.externalPhotoCalibName=fgcm assembleCoadd.externalPhotoCalibName=fgcm assembleCoadd.assembleStaticSkyModel.externalPhotoCalibName=fgcm 
 
   multiBandDriver:
     head_task: |
@@ -149,9 +150,9 @@ templates:
     #SBATCH -N 1
     #SBATCH --ntasks-per-node=1
     #SBATCH --time=48:00:00
-    #SBATCH -J jc{tract}-{filter}
-    #SBATCH --output=jc{tract}-{filter}-%j.log
-    srun jointcal.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB --rerun {rerun}-sfm:{rerun} --id ccd=0..8^10..103 visit={visit} filter={filter} tract={tract} --configfile /home/madamow/gen2-reproc/rerun_scripts/DM-25176/jointcal.py --clobber-versions --clobber-config
+    #SBATCH -J jointcal{tract}-{filter}
+    #SBATCH --output=jointcal{tract}-{filter}-%j.log
+    srun jointcal.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB --rerun {rerun}-sfm:{rerun} --id ccd=0..8^10..103 visit={visit} filter={filter} tract={tract} -c doPhotometry=False
 
   forcedPhotCcd: |
     #!/bin/bash -l
@@ -162,7 +163,7 @@ templates:
     #SBATCH -J frCcd{tract}-{filter}
     #SBATCH --output=/datasets/hsc/repo/rerun/{rerun}/logs/forcedPhotCcd/frCcd-{tract}-{filter}-%j.log
     #SBATCH --error=/datasets/hsc/repo/rerun/{rerun}/logs/forcedPhotCcd/frCcd-{tract}-{filter}-%j.log
-    srun forcedPhotCcd.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB  --rerun {rerun} -j 12 --clobber-versions  --id ccd=0..8^10..103 tract={tract} visit={visit}
+    srun forcedPhotCcd.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB  --rerun {rerun} -j 12 --clobber-versions  --id ccd=0..8^10..103 tract={tract} visit={visit} -c externalPhotoCalibName=fgcm
 
   coaddAnalysis: |
     #!/bin/bash -l
@@ -206,7 +207,7 @@ templates:
     #SBATCH -J mat-{tract}-{filter}
     #SBATCH --output=/datasets/hsc/repo/rerun/{rerun}/qaLogs/matchedVisitMetrics/matchedVisitMetrics-{tract}-{filter}-%j.log
     #SBATCH --error=/datasets/hsc/repo/rerun/{rerun}/qaLogs/matchedVisitMetrics/matchedVisitMetrics-{tract}-{filter}-%j.log
-    srun matchedVisitMetrics.py /datasets/hsc/repo/rerun/{rerun} --output  /datasets/hsc/repo/rerun/{rerun}/validateDrp/matchedVisitMetrics/{tract}/{filter} --config doApplyExternalPhotoCalib=True doApplyExternalSkyWcs=True instrumentName='HSC' datasetName='HSC-RC2' --id tract={tract}  visit={visit} ccd=0..8^10..103
+    srun matchedVisitMetrics.py /datasets/hsc/repo/rerun/{rerun} --output  /datasets/hsc/repo/rerun/{rerun}/validateDrp/matchedVisitMetrics/{tract}/{filter} --config doApplyExternalPhotoCalib=True doApplyExternalSkyWcs=True instrumentName='HSC' datasetName='HSC-RC2' --id tract={tract}  visit={visit} ccd=0..8^10..103 --config externalPhotoCalibName=fgcm --clobber-config
 
   visitAnalysis:
     head_filter: |
@@ -232,7 +233,7 @@ templates:
       #SBATCH --error=/datasets/hsc/repo/rerun/{rerun}/qaLogs/compareVisitAnalysis/compareVisitAnalysis-{tract}_{tractname}-{filter}-{kchunck}-%j.err
       srun --output /datasets/hsc/repo/rerun/{rerun}/qaLogs/compareVisitAnalysis/compareVisitAnalysis-{tract}_{tractname}_{filter}.out --ntasks={ntasks} --multi-prog {mpfile}
     multi:
-      "{mpindex} compareVisitAnalysis.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB --rerun {rerun} --rerun2 {rerun2} --no-versions  --tract={tract} --id visit={visitID} -c externalPhotoCalibName1=fgcm externalPhotoCalibName2=jointcal"
+      "{mpindex} compareVisitAnalysis.py /datasets/hsc/repo --calib /datasets/hsc/repo/CALIB --rerun {rerun} --rerun2 {rerun2} --no-versions  --tract={tract} --id visit={visitID} -c externalPhotoCalibName1=fgcm externalPhotoCalibName2=fgcm"
 
   matchVisits:
     head_task: |
