--- a/config/DC2.2i_templates.yaml
+++ b/config/DC2.2i_templates.yaml
@@ -2,15 +2,46 @@
 # The setup to load up the stack
 setup: |
   # Setup LSST stack for {week}
+  export LSST_CONDA_ENV_NAME=my-env
   .  /software/lsstsw/stack/loadLSST.bash
   setup lsst_distrib -t {week}
 
+gitcloner: |
+  # Clone modules
+  CWD=$(pwd)
+  mkdir -p {gitpath}
+
+  cd {gitpath}
+  git clone https://github.com/lsst-dm/qa_explorer
+  git clone https://github.com/lsst-dm/pipe_analysis
+
+  cd $CWD
+
+builder: |
+  # Make sure you run this before building:
+  # scl enable devtoolset-8 bash
+
+  echo "---------------------------------"
+  echo " Make sure you run this before:"
+  echo "  scl enable devtoolset-8 bash"
+  echo "---------------------------------"
+
+  {setup}
+
+  CWD=$(pwd)
+
+  cd {gitpath}/qa_explorer
+  scons
+
+  cd {gitpath}/pipe_analysis
+  scons
+  cd $CWD
 
 templates:
 
   singleFrameDriver: >
     singleFrameDriver.py /datasets/DC2/repoRun2.2i --rerun {rerun}/sfm --batch-type slurm
-    --mpiexec='-bind-to socket' --job {jobname} --cores 24 --time 900  --id visit={visit};
+    --mpiexec='-bind-to socket' --job {jobname} --cores 24 --time 900  --id visit={visit} --configfile /home/$USER/HSC/DC2/filter_config_2021_12.py;
 
   makeSkyMap: >
     makeSkyMap.py /datasets/DC2/repoRun2.2i --rerun {rerun}/sfm --no-versions >& log_makeSkyMap_{weeknumber}
@@ -19,8 +50,8 @@ templates:
     head_task: |
       #!/bin/bash -l
     multi: >-
-      coaddDriver.py /datasets/DC2/repoRun2.2i --rerun {rerun}/sfm:{rerun}/coadd -c makeCoaddTempExp.doApplyUberCal=False
-      -c assembleCoadd.doApplyUberCal=False --batch-type=slurm --mpiexec='-bind-to socket' --time 600 --cores 24
+      coaddDriver.py /datasets/DC2/repoRun2.2i --rerun {rerun}/sfm:{rerun}/coadd
+      --batch-type=slurm --mpiexec='-bind-to socket' --time 600 --cores 24
       --job coadd{filter}{tract} --id filter={filter} tract={tract} --selectId visit={visit};
 
   multiBandDriver:
@@ -29,14 +60,31 @@ templates:
     multi: >-
       multiBandDriver.py /datasets/DC2/repoRun2.2i --rerun {rerun}/coadd:{rerun}/multi --batch-type=slurm --mpiexec='-bind-to socket'
       --job mt{tract}-{patch} --core 1 --time 45000 -c measureCoaddSources.propagateFlags.ccdName='detector'
-      --id filter={filter_str} tract={tract} patch={patch_alt};
+      --id filter={filter_str} tract={tract} patch={patch_alt} --configfile /home/$USER/HSC/DC2/filter_config_multi.py;
 
   matchedVisitMetrics: 
     head_task: |
       #!/bin/bash -l
+      OPTIONS="-p normal -N 1 --ntasks-per-node=1 -t 24:00:00"
     multi: >-
-      matchedVisitMetrics.py /datasets/DC2/repoRun2.2i --rerun {rerun} --output  /datasets/DC2/repoRun2.2i/{rerun}/validateDrp/matchedVisitMetrics/{tract}/{filter} --config  instrumentName='HSC' datasetName='HSC-DC2' --id filter={filter} tract={tract} visit={visit}; 
-    
+      sbatch $OPTIONS 
+      --wrap="matchedVisitMetrics.py /datasets/DC2/repoRun2.2i/rerun/{rerun}/multi --output  /datasets/DC2/repoRun2.2i/rerun/{rerun}/validateDrp/matchedVisitMetrics/3828/{filter} 
+      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3828 visit={visit} --configfile /home/emorgan2/HSC/DC2/filter_config_multi.py"; 
+      sbatch $OPTIONS 
+      --wrap="matchedVisitMetrics.py /datasets/DC2/repoRun2.2i/rerun/{rerun}/multi --output  /datasets/DC2/repoRun2.2i/rerun/{rerun}/validateDrp/matchedVisitMetrics/3829/{filter} 
+      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3829 visit={visit} --configfile /home/emorgan2/HSC/DC2/filter_config_multi.py"; 
+
+#  matchedVisitMetrics: |
+#    #!/bin/bash -l
+#    #SBATCH -p normal
+#    #SBATCH -N 1
+#    #SBATCH --ntasks-per-node=1
+#    #SBATCH -t 09:00:00
+#    #SBATCH -J mat-{tract}-{filter}
+#    #SBATCH --output=/datasets/DC2/repoRun2.2i/rerun/{rerun}/qaLogs/matchedVisitMetrics/matchedVisitMetrics-{tract}-{filter}-%j.log
+#    #SBATCH --error=/datasets/DC2/repoRun2.2i/rerun/{rerun}/qaLogs/matchedVisitMetrics/matchedVisitMetrics-{tract}-{filter}-%j.log
+#    srun matchedVisitMetrics.py /datasets/DC2/repoRun2.2i/rerun/{rerun}/multi --output  /datasets/DC2/repoRun2.2i/rerun/{rerun}/validateDrp/matchedVisitMetrics/{tract}/{filter}  --config instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract={tract} visit={visit}
+
 
 # Extra specs per task beyond the template
 tasks_specs:
