--- a/config/DC2templates.yaml
+++ b/config/DC2templates.yaml
@@ -4,7 +4,38 @@ setup: |
   # Setup LSST stack for {week}
   .  /software/lsstsw/stack/loadLSST.bash
   setup lsst_distrib -t {week}
+gitcloner: |
+  # Clone modules
+  CWD=$(pwd)
+  mkdir -p {gitpath}
 
+  cd {gitpath}
+  git clone https://github.com/lsst-dm/qa_explorer
+  git clone https://github.com/lsst-dm/pipe_analysis
+
+  cd $CWD
+
+builder: |
+  # Make sure you run this before building:
+  #   #  scl enable devtoolset-8 bash
+  #
+  #
+
+  echo "---------------------------------"
+  echo " Make sure you run this before:"
+  echo "  scl enable devtoolset-8 bash"
+  echo "---------------------------------"
+
+  {setup}
+
+  CWD=$(pwd)
+
+  cd {gitpath}/qa_explorer
+  scons
+
+  cd {gitpath}/pipe_analysis
+  scons
+  cd $CWD
 
 templates:
 
