--- a/config/RC2fakes_templates.yaml
+++ b/config/RC2fakes_templates.yaml
@@ -4,11 +4,11 @@ setup: |
   . /software/lsstsw/stack/loadLSST.bash 
   setup git_lfs
   export OMP_NUM_THREADS=1
-  setup lsst_sims 
-  setup lsst_distrib -k -t {week}
+  setup lsst_distrib -t {week}
+  setup lsst_sims -k -t sims_{week}
 
-  setup  -v -r {gitpath}/qa_explorer
-  setup  -v -r {gitpath}/pipe_analysis
+  setup -k -t {week} -v -r {gitpath}/qa_explorer
+  setup -k -t {week} -v -r {gitpath}/pipe_analysis
 
 multiBandDriver_config: |
   #config for mutliBandDriver
@@ -72,7 +72,8 @@ templates:
       processCcdWithFakesDriver.py /datasets/hsc/repo
       --rerun {rerun} --batch-type slurm --mpiexec='-bind-to socket'
       --job fakes{tract}{filter} --cores 70 --time 900 --id visit={visit} ccd=0..8^10..103
-      filter={filter} tract={tract} -c doMakeSourceTable=True -c doSaveWideSourceTable=True -c processCcdWithFakes.useUpdatedCalibs=True
+      filter={filter} tract={tract} -c doMakeSourceTable=True -c doSaveWideSourceTable=True
+#      filter={filter} tract={tract} -c doMakeSourceTable=True -c doSaveWideSourceTable=True -c processCcdWithFakes.useUpdatedCalibs=True
 
   coaddDriver:
     head_task: |
@@ -114,9 +115,9 @@ templates:
       #SBATCH --ntasks-per-node={ntasks}
       #SBATCH --time=48:00:00
       #SBATCH -J SBATCH -J va{tract}-{filter}
-      srun --output /datasets/hsc/repo/rerun/{rerun}-va/logs/visitAnalysis-{tract}-{tractname}-%j-%2t.out --ntasks={ntasks} --multi-prog {mpfile}
+      srun --output /datasets/hsc/repo/rerun/{rerun}-va/logs/visitAnalysis-{tract}-{tractname}-%j-%2t.out --ntasks={ntasks} --multi-prog {mpfile} 
     multi:
-      "{mpindex} visitAnalysis.py /datasets/hsc/repo --rerun {rerun}:{rerun}-va --calib /datasets/hsc/repo/CALIB  --tract={tract} --id visit={visitID}"
+      "{mpindex} visitAnalysis.py /datasets/hsc/repo --rerun {rerun}:{rerun}-va --calib /datasets/hsc/repo/CALIB  --tract={tract} --id visit={visitID} --config externalPhotoCalibName=fgcm -c hasFakes=True -c doReadParquetTables=False"
 
 
 # Extra specs per task beyond the template
