--- a/config/DC2.2i_templates.yaml
+++ b/config/DC2.2i_templates.yaml
@@ -69,10 +69,10 @@ templates:
     multi: >-
       sbatch $OPTIONS 
       --wrap="matchedVisitMetrics.py /datasets/DC2/repoRun2.2i/rerun/{rerun}/multi --output  /datasets/DC2/repoRun2.2i/rerun/{rerun}/validateDrp/matchedVisitMetrics/3828/{filter} 
-      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3828 visit={visit} --configfile /home/emorgan2/HSC/DC2/filter_config_multi.py"; 
+      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3828 visit={visit} --configfile /home/$USER/HSC/DC2/filter_config_multi.py"; 
       sbatch $OPTIONS 
       --wrap="matchedVisitMetrics.py /datasets/DC2/repoRun2.2i/rerun/{rerun}/multi --output  /datasets/DC2/repoRun2.2i/rerun/{rerun}/validateDrp/matchedVisitMetrics/3829/{filter} 
-      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3829 visit={visit} --configfile /home/emorgan2/HSC/DC2/filter_config_multi.py"; 
+      --config  instrumentName='LSST-ImSim' datasetName='DC2' --id filter={filter} tract=3829 visit={visit} --configfile /home/$USER/HSC/DC2/filter_config_multi.py"; 
 
 #  matchedVisitMetrics: |
 #    #!/bin/bash -l
